CMS-9877: forward port - fixed consistent paragraph styles in ckeditor view & edit modes: - Increased spacing between paragraphs - Set line-height in both view & edit mode to be the same [from revision 57801]

--- a/cms/api/src/main/styling/styles/_editor.scss
+++ b/cms/api/src/main/styling/styles/_editor.scss
@@ -129,7 +129,7 @@
   }
 
   .hippo-editor-field-textarea {
-    line-height: normal;
+    line-height: 1.6em;
   }
 
   .linefill {
